WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211560
Fix potential threading issue in AudioMediaStreamTrackRendererCocoa::render
https://bugs.webkit.org/show_bug.cgi?id=211560
Summary
Fix potential threading issue in AudioMediaStreamTrackRendererCocoa::render
youenn fablet
Reported
2020-05-07 05:02:14 PDT
Fix potential threading issue in AudioMediaStreamTrackRendererCocoa::render
Attachments
Patch
(4.30 KB, patch)
2020-05-07 05:09 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-05-07 05:09:00 PDT
Created
attachment 398722
[details]
Patch
EWS
Comment 2
2020-05-07 08:37:55 PDT
Committed
r261290
: <
https://trac.webkit.org/changeset/261290
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398722
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-07 08:38:19 PDT
<
rdar://problem/62977739
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug